--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.open {
+  font-family: "Open Sans", sans-serif;
+}
+*,
+.btn,
+.active,
+li,
+a,
+.menu {
+  border-radius: 0px !important;
+}
+.active {
+  background-color: rgb(245 158 11) !important;
+  color: black !important;
+}
+.active:hover {
+  background-color: rgb(217 119 6) !important;
+}
